[package]
name = "tor-vpn"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
crossbeam = "0.8"
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["native-tls"] }
flate2 = "1"
tar = "0.4"
rand = "0.8"
wintun = "0.5"
socket2 = "0.5"
windows-sys = { version = "0.59", features = [
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
    "Win32_Foundation",
]}

[profile.release]
opt-level = 2
lto = true
